# Rinha-do-Backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf
scripts/: load_test_varied.sh
src/: api.rs  config.rs  dataset.rs  lib.rs  main.rs  models.rs  search.rs  vectorizer.rs
